@@ -215,7 +215,7 @@ button {
 }
 
 .checkmark_line {
-	line-height:40px;
+	line-height:30px;
 }
 
 .link_container {
