@@ -13,3 +13,9 @@ moneypacket.org-v0.2
 - Withdraw to new money packet
 - Withdraw to bitcoin address
 - Add funds to existing money packet
+
+07/12/2015
+moneypacket.org-v0.21
+- clarified terminology around claiming vs sending vs receiving
+- moved transaction fee notice out of confirmation dialog
+- added notice that local currencies will fluctuate against market price of bitcoin
